[gd_scene load_steps=7 format=3 uid="uid://i3foluw8dcmd"]

[ext_resource type="Script" path="res://src/core/server/server_console/server_console.gd" id="1_2558d"]
[ext_resource type="Script" path="res://src/core/server/server_console/player_panel/PlayerListManager.gd" id="2_dh4te"]
[ext_resource type="Script" path="res://src/core/server/server_console/player_panel/PlayerVisualMonitorPanel.gd" id="3_euax3"]
[ext_resource type="Script" path="res://src/core/server/server_console/server_log_panel/ServerLog.gd" id="4_qwk75"]
[ext_resource type="Script" path="res://src/core/server/server_console/handler/PresetHandler.gd" id="5_gh1et"]
[ext_resource type="Script" path="res://src/core/server/server_console/handler/SettingsHandler.gd" id="6_ene3s"]

[node name="ServerConsole" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2558d")

[node name="ServerConsoleContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PlaceHolderTop" type="HBoxContainer" parent="ServerConsoleContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0

[node name="PlaceHolderTop" type="Label" parent="ServerConsoleContainer/PlaceHolderTop"]
layout_mode = 2
size_flags_horizontal = 6
text = "PlaceHolder"
horizontal_alignment = 1

[node name="TopStartServer" type="HBoxContainer" parent="ServerConsoleContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="ServerLabel" type="Label" parent="ServerConsoleContainer/TopStartServer"]
layout_mode = 2
size_flags_horizontal = 6
text = "Server:"
horizontal_alignment = 1

[node name="ServerPresetList" type="ItemList" parent="ServerConsoleContainer/TopStartServer"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
item_count = 2
item_0/text = "GodotDatabaseWebSocket"
item_1/text = "MongoDatabaseRestAPI"

[node name="StartServerButton" type="Button" parent="ServerConsoleContainer/TopStartServer"]
layout_mode = 2
text = "StartServer"

[node name="StopServerButton" type="Button" parent="ServerConsoleContainer/TopStartServer"]
layout_mode = 2
text = "StopServer"

[node name="ServerPortLabel" type="Label" parent="ServerConsoleContainer/TopStartServer"]
layout_mode = 2
text = "ServerPort:"

[node name="ServerPortInput" type="LineEdit" parent="ServerConsoleContainer/TopStartServer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "9997"

[node name="ServerAutoStartCheckButton" type="CheckButton" parent="ServerConsoleContainer/TopStartServer"]
layout_mode = 2
text = "AutoStartServer"

[node name="UseDatabaseLabel" type="Label" parent="ServerConsoleContainer/TopStartServer"]
layout_mode = 2
text = "Backend Type:"

[node name="UseDatabaseTypeLabel" type="Label" parent="ServerConsoleContainer/TopStartServer"]
layout_mode = 2

[node name="TopBackend" type="HBoxContainer" parent="ServerConsoleContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0

[node name="BackendIP" type="Label" parent="ServerConsoleContainer/TopBackend"]
layout_mode = 2
text = "BackendIP:"

[node name="BackendIPInput" type="LineEdit" parent="ServerConsoleContainer/TopBackend"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
text = "http://localhost"

[node name="BackendPortLabel" type="Label" parent="ServerConsoleContainer/TopBackend"]
layout_mode = 2
text = "BackendPort:"

[node name="BackendPortInput" type="LineEdit" parent="ServerConsoleContainer/TopBackend"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "3000"
placeholder_text = "3000"

[node name="ServerValidationToken" type="Label" parent="ServerConsoleContainer/TopBackend"]
layout_mode = 2
text = "ServerValidationToken:"

[node name="ServerValidationTokenInput" type="LineEdit" parent="ServerConsoleContainer/TopBackend"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
text = "your_server_key_here"
placeholder_text = "your_server_key_here"

[node name="ConnectToBackend" type="Button" parent="ServerConsoleContainer/TopBackend"]
layout_mode = 2
text = "Connect"

[node name="DisconnectFromBackend" type="Button" parent="ServerConsoleContainer/TopBackend"]
layout_mode = 2
text = "Disconnect"

[node name="Mid" type="HBoxContainer" parent="ServerConsoleContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 0

[node name="SideContainer" type="VBoxContainer" parent="ServerConsoleContainer/Mid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PlayerListLabel" type="Label" parent="ServerConsoleContainer/Mid/SideContainer"]
layout_mode = 2
text = "Playerlist:"

[node name="PlayerContainer" type="VBoxContainer" parent="ServerConsoleContainer/Mid/SideContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="PlayerContainerPanel" type="Panel" parent="ServerConsoleContainer/Mid/SideContainer/PlayerContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="PlayerListManager" type="ItemList" parent="ServerConsoleContainer/Mid/SideContainer/PlayerContainer/PlayerContainerPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 12
script = ExtResource("2_dh4te")

[node name="PlayerVisualMonitorPanel" type="Panel" parent="ServerConsoleContainer/Mid/SideContainer/PlayerContainer"]
layout_mode = 2
size_flags_vertical = 3
script = ExtResource("3_euax3")

[node name="ControlContainer" type="VBoxContainer" parent="ServerConsoleContainer/Mid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ServerControlPanelLabel" type="Label" parent="ServerConsoleContainer/Mid/ControlContainer"]
layout_mode = 2
text = "ServerControlPanel:"

[node name="ServerControlPanel" type="Panel" parent="ServerConsoleContainer/Mid/ControlContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ServerControlGridContainer" type="GridContainer" parent="ServerConsoleContainer/Mid/ControlContainer/ServerControlPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
columns = 2

[node name="NetworkContainer" type="GridContainer" parent="ServerConsoleContainer/Mid/ControlContainer/ServerControlPanel/ServerControlGridContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Network" type="Label" parent="ServerConsoleContainer/Mid/ControlContainer/ServerControlPanel/ServerControlGridContainer/NetworkContainer"]
layout_mode = 2
text = "Network"

[node name="PlayerControlsButton" type="GridContainer" parent="ServerConsoleContainer/Mid/ControlContainer/ServerControlPanel/ServerControlGridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4

[node name="Player" type="Label" parent="ServerConsoleContainer/Mid/ControlContainer/ServerControlPanel/ServerControlGridContainer/PlayerControlsButton"]
layout_mode = 2
size_flags_horizontal = 3
text = "Player
"

[node name="Kick" type="Button" parent="ServerConsoleContainer/Mid/ControlContainer/ServerControlPanel/ServerControlGridContainer/PlayerControlsButton"]
layout_mode = 2
text = "Kick Player"

[node name="Ban" type="Button" parent="ServerConsoleContainer/Mid/ControlContainer/ServerControlPanel/ServerControlGridContainer/PlayerControlsButton"]
layout_mode = 2
text = "Ban Player"

[node name="Watch" type="Button" parent="ServerConsoleContainer/Mid/ControlContainer/ServerControlPanel/ServerControlGridContainer/PlayerControlsButton"]
layout_mode = 2
text = "watch Player"

[node name="Container3" type="GridContainer" parent="ServerConsoleContainer/Mid/ControlContainer/ServerControlPanel/ServerControlGridContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="ServerConsoleContainer/Mid/ControlContainer/ServerControlPanel/ServerControlGridContainer/Container3"]
layout_mode = 2
text = "Container3"

[node name="Button" type="Button" parent="ServerConsoleContainer/Mid/ControlContainer/ServerControlPanel/ServerControlGridContainer/Container3"]
layout_mode = 2
text = "ShowDatabases"

[node name="Button2" type="Button" parent="ServerConsoleContainer/Mid/ControlContainer/ServerControlPanel/ServerControlGridContainer/Container3"]
layout_mode = 2
text = "ShowUsers"

[node name="Button3" type="Button" parent="ServerConsoleContainer/Mid/ControlContainer/ServerControlPanel/ServerControlGridContainer/Container3"]
layout_mode = 2
text = "BanUser"

[node name="Button4" type="Button" parent="ServerConsoleContainer/Mid/ControlContainer/ServerControlPanel/ServerControlGridContainer/Container3"]
layout_mode = 2
text = "ShowRoutes"

[node name="Button5" type="Button" parent="ServerConsoleContainer/Mid/ControlContainer/ServerControlPanel/ServerControlGridContainer/Container3"]
layout_mode = 2
text = "ShowModels
"

[node name="Button6" type="Button" parent="ServerConsoleContainer/Mid/ControlContainer/ServerControlPanel/ServerControlGridContainer/Container3"]
layout_mode = 2
text = "ShowMiddleware"

[node name="Container4" type="GridContainer" parent="ServerConsoleContainer/Mid/ControlContainer/ServerControlPanel/ServerControlGridContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="ServerConsoleContainer/Mid/ControlContainer/ServerControlPanel/ServerControlGridContainer/Container4"]
layout_mode = 2
text = "FeaturesList"

[node name="FeaturesList" type="ItemList" parent="ServerConsoleContainer/Mid/ControlContainer/ServerControlPanel/ServerControlGridContainer/Container4"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/font_size = 12

[node name="BackendButtonPanelLabel" type="Label" parent="ServerConsoleContainer/Mid/ControlContainer"]
layout_mode = 2
text = "BackendButtonPanel:"

[node name="BackendButtonPanel" type="Panel" parent="ServerConsoleContainer/Mid/ControlContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="GridContainer" type="GridContainer" parent="ServerConsoleContainer/Mid/ControlContainer/BackendButtonPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
columns = 2
metadata/_edit_use_anchors_ = true

[node name="Container1" type="GridContainer" parent="ServerConsoleContainer/Mid/ControlContainer/BackendButtonPanel/GridContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="ServerConsoleContainer/Mid/ControlContainer/BackendButtonPanel/GridContainer/Container1"]
layout_mode = 2
text = "Container3"

[node name="LevelControlPanel" type="GridContainer" parent="ServerConsoleContainer/Mid/ControlContainer/BackendButtonPanel/GridContainer"]
layout_mode = 2

[node name="LevelControlPanel" type="Label" parent="ServerConsoleContainer/Mid/ControlContainer/BackendButtonPanel/GridContainer/LevelControlPanel"]
layout_mode = 2
text = "Container3"

[node name="GenerateButton" type="Button" parent="ServerConsoleContainer/Mid/ControlContainer/BackendButtonPanel/GridContainer/LevelControlPanel"]
layout_mode = 2
text = "Generate Levels
"

[node name="ViewLevelButton" type="Button" parent="ServerConsoleContainer/Mid/ControlContainer/BackendButtonPanel/GridContainer/LevelControlPanel"]
layout_mode = 2
text = "ShowDatabases"

[node name="Button3" type="Button" parent="ServerConsoleContainer/Mid/ControlContainer/BackendButtonPanel/GridContainer/LevelControlPanel"]
layout_mode = 2
text = "BanUser"

[node name="Button4" type="Button" parent="ServerConsoleContainer/Mid/ControlContainer/BackendButtonPanel/GridContainer/LevelControlPanel"]
layout_mode = 2
text = "ShowRoutes"

[node name="Button5" type="Button" parent="ServerConsoleContainer/Mid/ControlContainer/BackendButtonPanel/GridContainer/LevelControlPanel"]
layout_mode = 2
text = "ShowModels
"

[node name="Button6" type="Button" parent="ServerConsoleContainer/Mid/ControlContainer/BackendButtonPanel/GridContainer/LevelControlPanel"]
layout_mode = 2
text = "ShowMiddleware"

[node name="Container3" type="GridContainer" parent="ServerConsoleContainer/Mid/ControlContainer/BackendButtonPanel/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="ServerConsoleContainer/Mid/ControlContainer/BackendButtonPanel/GridContainer/Container3"]
layout_mode = 2
text = "DataBaseList"

[node name="FeaturesList" type="ItemList" parent="ServerConsoleContainer/Mid/ControlContainer/BackendButtonPanel/GridContainer/Container3"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/font_size = 12

[node name="Container4" type="GridContainer" parent="ServerConsoleContainer/Mid/ControlContainer/BackendButtonPanel/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="ServerConsoleContainer/Mid/ControlContainer/BackendButtonPanel/GridContainer/Container4"]
layout_mode = 2
text = "DunnoList"

[node name="FeaturesList" type="ItemList" parent="ServerConsoleContainer/Mid/ControlContainer/BackendButtonPanel/GridContainer/Container4"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/font_size = 12

[node name="ConsoleContainer" type="VBoxContainer" parent="ServerConsoleContainer/Mid"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ServerClientPanelLabel" type="Label" parent="ServerConsoleContainer/Mid/ConsoleContainer"]
layout_mode = 2
text = "ServerLogPanelLabel:"

[node name="ServerClientPanel" type="Panel" parent="ServerConsoleContainer/Mid/ConsoleContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ServerLog" type="RichTextLabel" parent="ServerConsoleContainer/Mid/ConsoleContainer/ServerClientPanel"]
clip_contents = false
custom_minimum_size = Vector2(350, 3)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/normal_font_size = 10
script = ExtResource("4_qwk75")

[node name="ServerBackendPanelLabel" type="Label" parent="ServerConsoleContainer/Mid/ConsoleContainer"]
layout_mode = 2
text = "Backend:"

[node name="ServerBackendPanel" type="Panel" parent="ServerConsoleContainer/Mid/ConsoleContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ServerBackendLog" type="RichTextLabel" parent="ServerConsoleContainer/Mid/ConsoleContainer/ServerBackendPanel"]
clip_contents = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="Bottom" type="HBoxContainer" parent="ServerConsoleContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0

[node name="Handler" type="Node" parent="."]

[node name="ServerConsoleLifeCycleHandler" type="Node" parent="Handler"]

[node name="ServerConsolePresetHandler" type="Node" parent="Handler"]
script = ExtResource("5_gh1et")

[node name="ServerConsoleSettingsHandler" type="Node" parent="Handler"]
script = ExtResource("6_ene3s")

[node name="ServerConsoleUILoadHandler" type="Node" parent="Handler"]

[connection signal="pressed" from="ServerConsoleContainer/TopStartServer/StartServerButton" to="." method="_on_start_server_button_pressed"]
[connection signal="toggled" from="ServerConsoleContainer/TopStartServer/ServerAutoStartCheckButton" to="." method="_on_server_auto_start_check_button_toggled"]
[connection signal="pressed" from="ServerConsoleContainer/TopBackend/ConnectToBackend" to="." method="_on_connect_to_backend_pressed"]
[connection signal="item_activated" from="ServerConsoleContainer/Mid/SideContainer/PlayerContainer/PlayerContainerPanel/PlayerListManager" to="ServerConsoleContainer/Mid/SideContainer/PlayerContainer/PlayerContainerPanel/PlayerListManager" method="_on_item_activated"]
[connection signal="item_selected" from="ServerConsoleContainer/Mid/SideContainer/PlayerContainer/PlayerContainerPanel/PlayerListManager" to="ServerConsoleContainer/Mid/SideContainer/PlayerContainer/PlayerContainerPanel/PlayerListManager" method="_on_item_selected"]
[connection signal="pressed" from="ServerConsoleContainer/Mid/ControlContainer/ServerControlPanel/ServerControlGridContainer/PlayerControlsButton/Watch" to="ServerConsoleContainer/Mid/SideContainer/PlayerContainer/PlayerContainerPanel/PlayerListManager" method="_on_watch_pressed"]
